# script_M_Kran

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  backup_system.py  check_syntax.py  launch.bat  load_naks_to_db.py  pyproject.toml  requirements.txt  restore_database.py  stop_servers.bat  stop_servers.py  temp_query.py  web_launcher.py
backups/: full_backup_20251002_092349.json  full_backup_20251006_173825.json  full_backup_20251009_111343.json  full_backup_20251016_141809.json  full_backup_20251016_153138.json  full_backup_20251016_155318.json  full_backup_20251018_101900.json  full_backup_20251018_103536.json  full_backup_20251018_104300.json  full_backup_20251020_130419.json  full_backup_20251020_131952.json  full_backup_20251024_103939.json  full_backup_20251024_154218.json  full_backup_20251024_160125.json  full_backup_20251026_121904.json  full_backup_20251026_125251.json  full_backup_20251027_120200.json  full_backup_20251027_121925.json  full_backup_20251027_155559.json  full_backup_20251027_173309.json  full_backup_20251027_193400.json  full_backup_20251027_201514.json  full_backup_20251031_111726.json  full_backup_20251101_133249.json  full_backup_20251103_135323.json  full_backup_20251103_163807.json  full_backup_20251103_164451.json  full_backup_20251103_170931.json  full_backup_20251104_102805.json  full_backup_20251104_155813.json  full_backup_20251107_112426.json  full_backup_20251107_154602.json  full_backup_20251107_162854.json  full_backup_20251112_140337.json  full_backup_20251112_142417.json  full_backup_20251114_221730.json  full_backup_20251114_223408.json  full_backup_20251114_223445.json  full_backup_20251114_230017.json  full_backup_20251114_232725.json  (+25 more)
book_scripts/: ARCHITECTURE_ANALYSIS.md  ARCHIVED_SCRIPTS.md  AVERAGE_CALCULATION_WL_REPORT_SMR.md  CODE_QUALITY_GUIDE.md  DN_STATISTICS_DB_STRUCTURE.md  DN_STATISTICS_SETUP.md  DOCUMENTATION.md  DUPLICATES_SCRIPTS_REVIEW.md  FIXES_APPLIED.md  MIGRATION_GUIDE_DATABASE.md  REFACTORING_PROPOSALS.md  (+6 more)
(+359 files in other folders)
